--- a/static/home.html
+++ b/static/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheets" href="stylesheets/home.css">
     <title>Welcome! {{.Name}}</title>
 </head>
 <body>
